fixed CORS cfg